# cs224r

./: .gitignore  LICENSE  Makefile  README.md  REPRODUCE.md  RESULTS.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: agent_A.yaml  agent_B.yaml  agent_C.yaml  agent_D.yaml  dynamics.yaml
docs/: decisions.md  design_decisions.md  phase1_environment.md  phase2_ppo_baseline.md  phase3_dynamics_model.md  phase4_agents_bc.md  phase5_evaluation.md  setup.md
infra/: download_data.py  modal_app.py  modal_config.py  modal_real_full.py  modal_real_imagenet.py  modal_real_imagenet_v2.py  modal_results.py
results/: README.md  adaptation.csv  pareto.csv  regression.json  regret.csv  sample_efficiency.json  severity.csv  significance.json  training.csv
results/real_imagenet/: full_run_log.md  run_log.md  sweep_A_D_seeds_0_1_2.json  sweep_full_A_B_C_D_seeds_0_1_2.json  sweep_v2_A_D_seeds_0_1_2.json
results/real_ppo/: README.md  smoke_seed0.json
scripts/: build_manifest.py  check_tools.py  make_smoke_data.py  run_all_seeds.sh  smoke_local.py  smoke_pipeline.py
src/foveated/: README.md
src/foveated/algos/: dynamics_train.py  intrinsic_reward.py  precision.py  stats.py
src/foveated/data/: imagenet.py
src/foveated/envs/: feature_wrappers.py  foveated_env.py  intrinsic_wrapper.py
src/foveated/experiments/: adversarial_test.py  aggregate_seeds.py  budget_sweep.py  calibration.py  collect_rollouts.py  composite_figure.py  evaluate.py  feature_ablation.py  fit_laplace.py  lipschitz_estimate.py  online_adaptation.py  oracle_topk.py  per_corruption_breakout.py  policy_viz.py  severity_sweep.py  train_agent.py  validate_bound.py
src/foveated/models/: dynamics.py  dynamics_bayesian.py  dynamics_ib.py
tests/: test_aggregate.py  test_calibration_helpers.py  test_collect_and_train.py  test_composite_figure.py  test_dynamics.py  test_dynamics_bayesian.py  test_dynamics_ib.py  test_env.py  test_env_stop_action.py  test_fit_laplace_integration.py  test_lipschitz.py  test_oracle.py  test_per_corruption_breakout.py  test_stats.py  test_validate_bound.py  test_wrappers.py  test_wrappers_laplace.py
